- Now working in WPF and SL

--- a/osk/Wikiled.Controls/Keyboard/KeyboardControl.xaml
+++ b/osk/Wikiled.Controls/Keyboard/KeyboardControl.xaml
@@ -4,6 +4,7 @@
     xmlns:UI="clr-namespace:Wikiled.Controls.UI"	
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    x:Name="root"
 	mc:Ignorable="d" xmlns:Controls="clr-namespace:System.Windows.Controls">
     <UserControl.Resources>
         <Style x:Key="ImageButton" TargetType="Button">
@@ -144,8 +145,6 @@
         <Style x:Key="regularButton" TargetType="Button">
             <Setter Property="Height" Value="50"/>
             <Setter Property="Width" Value="50"/>
-            <Setter Property="Background" Value="#FF1F3B53"/>
-            <Setter Property="Foreground" Value="#FF000000"/>
             <Setter Property="Padding" Value="3"/>
             <Setter Property="BorderThickness" Value="1"/>
         </Style>
@@ -177,15 +176,15 @@
             <Setter Property="Width" Value="180" />
             <Setter Property="Height" Value="30" />
             <Setter Property="VerticalContentAlignment" Value="Center" />
-        </Style>
-        <UI:KeyStyleConverter x:Key="styleConverter" />
+        </Style>        
         <UI:OpacityConverter x:Key="opacityConverter" />
         <UI:VisibilityConverter x:Key="visibilityConverter" />    
         <UI:BooleanVisibilityConverter x:Key="visibilityOfBool" />
+        <UI:KeyStyleConverter x:Key="styleConverter" />
     </UserControl.Resources>
     <Grid>
         <StackPanel Orientation="Vertical" >
-            <StackPanel x:Name="toolBar" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,15,0,10" Visibility="{Binding Mode=OneWay, Path=VisibleHelperControls, Converter={StaticResource visibilityOfBool}}" >
+            <StackPanel x:Name="toolBar" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,15,0,10" Visibility="{Binding Mode=OneWay, Path=VisibleHelperControls, Converter={StaticResource visibilityOfBool}, ElementName=root}" >
                 <TextBox x:Name="inputText" Width="200" Style="{StaticResource TextBoxStyle}"  Text="{Binding Mode=TwoWay, Path=Text}" BorderBrush="#FF179ED2" BorderThickness="3,3,3,3" FontSize="22" Height="40" />
                 <Button x:Name="okButton"  Margin="5, 0, 5, 0" Style="{StaticResource ImageButton}" Click="closeClick" >
                     <Image Source="/Wikiled.Controls;component/Images/Apply.jpg" Width="46" Height="46" Stretch="UniformToFill" />
@@ -220,9 +219,9 @@
                                             <Button  Padding="2" x:Name="x"  
                                         Style="{Binding Path=Style, Converter={StaticResource styleConverter}}" 
                                         UI:Commands.Command="{Binding Command}"
-                                        UI:Commands.CommandParameter="{Binding Path=Value}" Background="LawnGreen" >
+                                        UI:Commands.CommandParameter="{Binding Path=Value}" >
                                                 <Button.Content>
-                                                    <Controls:Viewbox VerticalAlignment="Stretch">
+                                                    <Viewbox VerticalAlignment="Stretch">
                                                         <StackPanel Orientation="Horizontal">
                                                             <Ellipse Width="6" Height="6" Visibility="{Binding Converter={StaticResource visibilityConverter}}" Opacity="{Binding Path=IsChecked, Converter={StaticResource opacityConverter}}" >
                                                                 <Ellipse.Fill>
@@ -235,7 +234,7 @@
                                                             </Ellipse>
                                                             <TextBlock VerticalAlignment="Center" Text="{Binding Path=Value}"></TextBlock>
                                                         </StackPanel>
-                                                    </Controls:Viewbox>
+                                                    </Viewbox>
                                                 </Button.Content>
                                             </Button>
                                         </StackPanel>
