--- a/osk/Example.WPF/MainWindow.xaml
+++ b/osk/Example.WPF/MainWindow.xaml
@@ -2,8 +2,12 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:keyboard="clr-namespace:Wikiled.Controls.Keyboard;assembly=Wikiled.Controls"
-        Title="MainWindow" Height="350" Width="525">
+        xmlns:controls="clr-namespace:Wikiled.Controls;assembly=Wikiled.Controls"
+        Title="MainWindow" Height="574" Width="1154.3">
     <Grid>
         <keyboard:KeyboardControl />
+
+        <TextBox Margin="591,305,0,0" controls:KeyboardHelper.AttachOSK="true" Height="47" VerticalAlignment="Top" HorizontalAlignment="Left" Width="275"></TextBox>
+        <TextBox Margin="87,364,0,0" controls:KeyboardHelper.AttachOSK="true" Height="47" VerticalAlignment="Top" HorizontalAlignment="Left" Width="275"/>
     </Grid>
 </Window>
